Corrected z-index for full size images and slideshow to display properly

--- a/css/fix-ie.css
+++ b/css/fix-ie.css
@@ -1,10 +1,6 @@
 /**
  * Fix display in IE 6, 7
  */
-#doc4 {
-  border:3px solid #d7e1fa;
-}
-
 #g-banner {
   z-index: 2;
   zoom: 1;
